--- a/website/static/static/presto.css
+++ b/website/static/static/presto.css
@@ -351,10 +351,11 @@ code {
   display: block;
   text-align: center;
   color: #fff;
-  max-width: 1100px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 1em;
 }
+
 
 @media(min-width:768px) {
   .banner-content {
@@ -377,15 +378,41 @@ code {
 }
 
 .banner-logo {
-  width: 200px;
+  max-width: 280px;
   height: auto;
   margin-right: 0.5em;
 }
 
 .banner-info {
   font-size: 1.25em;
-  padding: 0 1em;
+  padding: 0 30px;
 }
+
+@media(min-width:768px) {
+    .banner-info {
+      width: 0;
+      flex: 1 1 50%;
+      align-self:stretch;
+      display: flex;
+      flex-direction:column;
+      justify-content: center;
+      align-items:center;
+      text-align:center;
+    }
+    .banner-info div {
+        display:flex;
+        justify-content:stretch;
+        flex-direction:column;
+        align-items:center;
+        justify-content: center;
+        margin: auto;
+    }
+    .banner-info .btn {
+        flex-grow:0;
+        margin: 0;
+    }
+}
+
 
 .banner-info h2 {
   font-size: 1.4em;
@@ -398,12 +425,40 @@ code {
   margin:0;
 }
 
-.banner-info h3 {
+.banner-info h3, .banner-info h4 {
   padding: 0;
   margin:0;
   color: #fff;
 }
 
+.banner-info p {
+  padding: 0;
+  margin:0;
+  color: #fff;
+  text-align:center;
+}
+
+.white-separator {
+    height: 1px;
+    border-bottom: 3px solid #fff;
+    width: 90%;
+    margin: 30px auto;
+    opacity: 0.5;
+  }
+@media(min-width:768px) {
+  .white-separator {
+    height: auto;
+    border-bottom: 0 none;
+    border-left: 3px solid #fff;
+    width: 1px;
+    max-width: 1px;
+    flex: 0 0 1px;
+    align-self: stretch;
+    opacity: 0.5;
+  }
+}
+
 .mt-3em  {
     margin-top: 3em;
 }
+
