added logos to prestocon banner

--- a/website/static/static/presto.css
+++ b/website/static/static/presto.css
@@ -487,6 +487,26 @@ code {
     margin-top: 3em;
 }
 
+.banner-content .feature-logos {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    max-width: 800px;
+    margin:  0 atuo;
+}
+.banner-content .feature-logos img{
+  margin: 15px;
+  height: auto !important;
+  filter: brightness(0) invert(1);
+  max-width: 150px;
+  width: 100%;
+  height: auto;
+}
+
+
 /* PrestoCon and PrestoCon Day pages */
 
 .prestocon-header {
