--- a/website/static/static/presto.css
+++ b/website/static/static/presto.css
@@ -352,6 +352,8 @@ code {
   background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(67,195,241,1) 59%, rgba(93,136,214,1) 100%);
   background-image: url(../img/prestocon_21/bg_big_21.png),linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(67,195,241,1) 59%, rgba(93,136,214,1) 100%);
   background-size:auto 100%;
+  /*background: url(../img/prestoconday_bg.png) center center no-repeat #3D9FE5;
+  background-size:cover;*/
   background-repeat: no-repeat;
   background-position: center center;
 }
@@ -406,7 +408,6 @@ code {
   width: 95%;
   max-width: 400px;
   height: auto;
-  margin-right: 0.5em;
 }
 .banner-info {
   font-size: 1.25em;
@@ -520,6 +521,16 @@ code {
   background: url(../img/prestoconday_bg.png) center center no-repeat #3D9FE5;
   background-size: cover;
   text-align: center;
+  padding: 30px;
+}
+
+.prestocon-21-header {
+    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(67,195,241,1) 59%, rgba(93,136,214,1) 100%);
+  background-image: url(../img/prestocon_21/bg_big_21.png),linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(67,195,241,1) 59%, rgba(93,136,214,1) 100%);
+  background-size:auto 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+    text-align: center;
   padding: 30px;
 }
 
